@@ -110,6 +110,19 @@ DEPRECATED_ATTRIBUTE @interface MacView : CCGLView
 @interface CCScheduler (Deprecated)
 // new: [director scheduler]
 +(CCScheduler*) sharedScheduler DEPRECATED_ATTRIBUTE;
+// new: unscheduleAllForTarget
+-(void) unscheduleAllSelectorsForTarget:(id)target DEPRECATED_ATTRIBUTE;
+// new: unscheduleAll
+-(void) unscheduleAllSelectors DEPRECATED_ATTRIBUTE;
+// new: unscheduleAllWithMinPriority:
+-(void) unscheduleAllSelectorsWithMinPriority:(NSInteger)minPriority DEPRECATED_ATTRIBUTE;
+
+/** Unschedules all selectors and blocks from all targets with a minimum priority.
+ You should only call this with kCCPriorityNonSystemMin or higher.
+ @since v2.0.0
+ */
+-(void) unscheduleAllSelectorsWithMinPriority:(NSInteger)minPriority;
+
 @end
 
 @interface CCActionManager (Deprecated)
